# glaucoma-pipeline

./: CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/agents/: analyst.md  critic.md  dataset-builder.md  extractor.md  generate-test-data.md  insights.md  outliner.md  reviser.md  validate.md  verifier.md  writer.md
agents/: run_agent.sh
data/: ground_truth.json
data/extracted/: case_report_01.json  case_report_02.json  case_report_03.json  case_report_04.json  case_report_05.json  clinical_note_01.json  clinical_note_02.json  clinical_note_03.json
notebooks/: README.md  analysis.py
output/: analysis_results.json  case_report_draft.md  case_report_outline.md  critique.json  dataset.csv  dataset_verified.csv  insights.md  validation_report.json  validation_report.md
prompts/: 00_generate_test_data.md  01_extractor.md  02_dataset_builder.md  03_verifier.md  04_analyst.md  05_insights.md  06_outliner.md  07_writer.md  08_critic.md  09_reviser.md  10_validate.md
scripts/: run_pipeline.sh
